improved style to make display of cards responsive

--- a/output/team.html
+++ b/output/team.html
@@ -22,8 +22,7 @@
         </div>
     </div>
     <div class="container">
-        <div class="row">
-            <div class="team-area col-12 d-flex justify-content-center">
+        <div class="row team-area ">
                 
         <div class="card employee-card shadow p-3 m-2">
         <div class="card-header bg-success text-white">
@@ -95,7 +94,6 @@
     </div>
 </div>
         
-            </div>
         </div>
     </div>
 </body>
